exports[`components/View prop "children" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none">
  <div
    className="
  rn-alignItems:stretch
  rn-backgroundColor:transparent
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexShrink:0
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-font:inherit
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none"
    data-testid="1" />
</div>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-pointerEvents:box-only
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={Object {}} />
`;

exports[`components/View rendered element is a "div" by default 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none" />
`;

exports[`components/View rendered element is a "span" when inside <View accessibilityRole="button" /> 1`] = `
<button
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  role="button"
  type="button">
  <span
    className="
  rn-alignItems:stretch
  rn-backgroundColor:transparent
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexShrink:0
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-font:inherit
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none" />
</button>
`;
